--- a/app/src/main/res/layout/tool_list.xml
+++ b/app/src/main/res/layout/tool_list.xml
@@ -7,6 +7,16 @@
     android:background="@color/colorPrimaryDark"
     android:padding="2dp">
 
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/textView4"
+        android:layout_toEndOf="@+id/btnOpenMagnifier"
+        android:fontFamily="@font/baloo"
+        android:text="Alarm"
+        android:textColor="@color/btn_login" />
+
     <com.example.ecare_client.TitleLayout
         android:id="@+id/tool_box_title"
         android:layout_width="match_parent"
@@ -15,55 +25,12 @@
 
 
     <ImageView
-        android:id="@+id/btnPersonalInfo"
-        android:layout_width="145dp"
-        android:layout_height="145dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/btnSettings"
-        android:layout_marginStart="35dp"
-        android:background="@color/btn_login_bg"
-        app:srcCompat="@drawable/personal_info" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="184dp"
-        android:layout_height="41dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="26dp"
-        android:layout_marginTop="192dp"
-        android:fontFamily="@font/baloo"
-        android:text="   Personal Information"
-        android:textColor="@color/btn_login" />
-
-    <ImageView
-        android:id="@+id/btnSettings"
-        android:layout_width="140dp"
-        android:layout_height="140dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="96dp"
-        android:layout_toEndOf="@+id/textView2"
-        android:background="@color/btn_login_bg"
-        app:srcCompat="@drawable/settings" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/textView2"
-        android:layout_marginEnd="66dp"
-        android:fontFamily="@font/baloo"
-        android:text="Settings"
-        android:textColor="@color/btn_login" />
-
-    <ImageView
         android:id="@+id/btnOpenChecklist"
         android:layout_width="140dp"
         android:layout_height="140dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/btnPersonalInfo"
-        android:layout_marginBottom="159dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/btnOpenAlarmClock"
+        android:layout_marginStart="35dp"
         android:background="@color/btn_login_bg"
         app:srcCompat="@drawable/todo_list" />
 
@@ -72,10 +39,10 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="187dp"
-        android:layout_marginStart="73dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="253dp"
         android:fontFamily="@font/baloo"
         android:text="To-Do List"
         android:textColor="@color/btn_login" />
@@ -84,10 +51,10 @@
         android:id="@+id/btnOpenAlarmClock"
         android:layout_width="145dp"
         android:layout_height="145dp"
-        android:layout_alignBottom="@+id/btnOpenChecklist"
-        android:layout_alignEnd="@+id/btnSettings"
-        android:layout_alignTop="@+id/btnOpenChecklist"
-        android:layout_toEndOf="@+id/textView2"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="97dp"
         app:srcCompat="@drawable/alarm" />
 
     <ImageView
@@ -95,7 +62,8 @@
         android:layout_width="140dp"
         android:layout_height="140dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/btnOpenChecklist"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="125dp"
         android:background="@color/btn_login_bg"
         app:srcCompat="@drawable/magnifier" />
 
@@ -104,8 +72,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/textView4"
-        android:layout_marginBottom="39dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="95dp"
         android:fontFamily="@font/baloo"
         android:text="Magnifier"
         android:textColor="@color/btn_login" />
