--- a/app/src/main/res/layout/dialog_simple.xml
+++ b/app/src/main/res/layout/dialog_simple.xml
@@ -66,7 +66,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:background="@null"
-                    android:text="确定"
+                    android:text="Confirm"
                     android:textColor="@color/light_black"
                     android:textSize="16sp"/>
             </LinearLayout>
