--- a/app/src/main/res/layout/magnifier.xml
+++ b/app/src/main/res/layout/magnifier.xml
@@ -26,70 +26,33 @@
         android:id="@+id/button_flash"
         android:layout_width="@dimen/button_size_secondary"
         android:layout_height="@dimen/button_size_secondary"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:layout_gravity="right|bottom"
-        android:src="@drawable/ic_flash_on_black_48dp"
-        android:scaleType="centerInside"
-        android:paddingTop="@dimen/button_padding_secondary"
-        android:paddingBottom="@dimen/button_padding_secondary"
+        android:layout_marginStart="21dp"
+        android:layout_marginTop="37dp"
         android:background="@drawable/button_flash_round_corners"
         android:contentDescription="@string/button_flash_description"
-        android:layout_below="@+id/button_zoom"
-        android:layout_alignRight="@+id/button_zoom"
-        android:layout_alignEnd="@+id/button_zoom"
-        android:elevation="8dp" />
-
-
-    <ImageButton
-        android:id="@+id/button_pause"
-        android:layout_width="@dimen/button_size_third"
-        android:layout_height="@dimen/button_size_third"
-        android:src="@drawable/ic_pause"
-        android:paddingTop="@dimen/button_padding_secondary"
-        android:paddingBottom="@dimen/button_padding_secondary"
-        android:background="@drawable/button_zoom_round_corners"
-        android:contentDescription="@string/button_flash_description"
-        android:scaleType="centerInside"
-        android:layout_gravity="center_vertical"
-        android:layout_toLeftOf="@id/button_zoom"
         android:elevation="8dp"
-        android:layout_alignParentTop="false"
-        android:layout_alignParentBottom="false"
-        android:layout_alignParentLeft="false"
-        android:layout_alignWithParentIfMissing="false"
-        android:layout_alignBaseline="@+id/button_zoom"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="8dp" />
+        android:paddingBottom="@dimen/button_padding_secondary"
+        android:paddingTop="@dimen/button_padding_secondary"
+        android:scaleType="centerInside"
+        android:src="@drawable/ic_flash_on_black_48dp" />
+
 
     <ImageButton
         android:id="@+id/button_zoom"
         android:layout_width="@dimen/button_size_primary"
         android:layout_height="@dimen/button_size_primary"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:layout_gravity="right|center_vertical"
-        android:src="@drawable/ic_zoom"
-        android:scaleType="centerInside"
         android:background="@drawable/button_zoom_round_corners"
         android:contentDescription="@string/button_zoom_description"
-        android:paddingTop="@dimen/button_padding_primary"
+        android:elevation="16dp"
         android:paddingBottom="@dimen/button_padding_primary"
-        android:layout_centerVertical="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:elevation="16dp" />
-
-    <ImageButton
-        android:id="@+id/button_color"
-        android:layout_width="@dimen/button_size_secondary"
-        android:layout_height="@dimen/button_size_secondary"
-        android:layout_gravity="right|top"
-        android:src="@drawable/ic_brightness_medium_black_48dp"
+        android:paddingTop="@dimen/button_padding_primary"
         android:scaleType="centerInside"
-        android:paddingTop="@dimen/button_padding_secondary"
-        android:paddingBottom="@dimen/button_padding_secondary"
-        android:background="@drawable/button_color_round_corners"
-        android:contentDescription="@string/button_color_description"
-        android:layout_above="@+id/button_zoom"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:elevation="8dp" />
+        android:src="@drawable/ic_zoom" />
 
 </RelativeLayout>
